2016-02-23  Danilo Chang  <ray2501@gmail.com>

    * Add more check in env_handle open -mode option
    * Improve dbi_handle drop command option check
    * Improve dbi_handle del command option check

2016-02-21  Danilo Chang  <ray2501@gmail.com>

    * Setup version to v0.3.2 to test.
    * generic/tclmdb.c: env_handle sync command option add more check
    * generic/tclmdb.c: env_handle set_mapsize/set_maxreaders/set_maxdbs
      command option add more check

2016-02-19  Danilo Chang  <ray2501@gmail.com>

    * generic/tclmdb.c: Add more check in several commands option
    * generic/mdb.c: Update source code.
    * generic/tclmdb.c: Fix CURSOR del command option issue.
      Give -nodupdata correct option check
    * generic/tclmdb.c: CURSOR get command add options:
      -get_multiple and -next_multiple

2016-02-16  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update source code.
      1. Tweak Win32 errmsg buffer
      2. ITS#8324 Map NTAPI result codes to WIN32 codes

2016-02-05  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update source code.
      ITS#7992 Fix memleak in prev change (on Windows platform)

2016-01-30  Danilo Chang  <ray2501@gmail.com>

    * Setup version to v0.3.1 to test.
    * README.md: add -dupfixed option example
    * generic/lmdb.h: Update source code.
    * generic/mdb.c: Update source code.
      Fix MDB_VL32 mdb_cursor_count()/entrycount types
    * generic/midl.c: Update source code.
    * generic/midl.h: Update source code.
    * generic/tclmdb.c: Update source code.

2016-01-29  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update source code.
    * generic/midl.c: Update source code.

2016-01-26  Danilo Chang  <ray2501@gmail.com>

    * README.md
    * generic/mdb.c: Update source code.
    * generic/lmdb.h: Update source code.

2016-01-22  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update source code.
    * generic/lmdb.h: Update source code.
