@@ -1,3 +1,8 @@
+2016-02-24  Danilo Chang  <ray2501@gmail.com>
+
+    * Improve dbi_handle drop command behavior when del_flag equals 1.
+      If del_flag equals 1, delete dbi_handle command.
+
 2016-02-23  Danilo Chang  <ray2501@gmail.com>
 
     * Add more check in env_handle open -mode option
